# ost_image_classification

./: .gitignore  MANIFEST.in  README.md  classify_images.py  data_loader.py  evaluate_model.py  evaluation_results.txt  inference_runner.py  main.py  model.py  model_improvements.md  pyproject.toml  requirements.txt  setup.py  thresholds_precision.json  thresholds_prod_precision.json  thresholds_prod_recall.json  thresholds_recall.json
.cursor/plans/: production-inference-tool_ef0a7513.plan.md
