[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ost-image-classification"
version = "1.0.0"
description = "Multimodal image classifier for astronomical data (FITS/TIFF)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "OST-Observatory"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.21.0",
    "astropy>=5.0.0",
    "tensorflow>=2.8.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
ost-classify = "inference_runner:main"

[tool.setuptools]
py-modules = [
    "data_loader",
    "model",
    "main",
    "evaluate_model",
    "inference_runner",
]

[tool.setuptools.package-data]
"*" = [
    "thresholds_*.json",
    "*.md",
]
